2010-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* script/execute.c (grub_script_execute_cmdline): Use grub_print_error
	to show messages instead of discarding them.
	Process errors after executing command and not before. Keep old method
	too as precaution.

2010-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Check for ft2build.h.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/ieee1275/openfw.c (grub_halt): Try executing "poweroff".

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* genkernsyms.sh.in: Use TARGET_CC.

2010-02-07  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Update.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/multiboot2.h: Remove leftover file.
	* include/grub/normal.h [GRUB_UTIL]: Remove leftover declarations.
	* include/grub/partition.h [GRUB_UTIL]: Likewise.

2010-02-07  Yves Blusseau  <blusseau@zetam.org>

	* gnulib/getdelim.c: add missing header (type ssize_t must be defined).

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix warnings in grub-emu when compiling with maximum warning options.

	* util/grub-emu.c (ENABLE_RELOCATABLE): New definition.
	(grub_arch_modules_addr): Return 0 and not NULL.
	* util/misc.c (ENABLE_RELOCATABLE): New definition.
	(xstrdup): Use newstr instead of dup.
	* util/hostdisk.c (grub_util_biosdisk_get_grub_dev): Rename one instance
	of disk to dsk to avoid shadowing.
	(find_free_slot): Fix prototype.
	* util/getroot.c (grub_util_is_dmraid): Make static.
	* include/grub/time.h (grub_get_rtc) [GRUB_MACHINE_EMU || GRUB_UTIL]:
	Add missing prototype.
	* util/sdl.c (grub_video_sdl_set_viewport): Remove.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/i386/linux.c (grub_linux_setup_video): Handle error
	appropriately.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/reiserfs.c (grub_reiserfs_read): Use #if 0 instead of commenting
	code out.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>
